--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="description" content="Fizzify | Portfolio" />
+    <meta name="description" content="reiji | Portfolio" />
     <meta
       name="author"
-      content="Check out my Portfolio, feel free to message me!"
+      content=""
     />
 
-    <meta property="og:title" content="Fizzify | Portfolio" />
+    <meta property="og:title" content="reiji | Portfolio" />
     <meta property="og:type" content="website" />
     <meta
       property="og:description"
-      content="Check out my Portfolio, feel free to message me!"
+      content=""
     />
     <meta name="theme-color" content="#3DD6D0" />
 
@@ -24,7 +24,7 @@
       rel="stylesheet"
     />
 
-    <title>Fizzify | Portfolio</title>
+    <title>reiji | Portfolio</title>
     <script src="/app/js/jquery-3.5.1.min.js"></script>
     <link rel="stylesheet" href="/dist/css/main.css" />
   </head>
@@ -75,7 +75,7 @@
     <div id="fullpage">
       <div id="hero" class="section hero">
         <div class="container">
-          <h1 class="hero-title">Fizzify</h1>
+          <h1 class="hero-title">reiji</h1>
           <h2>I'm a <span class="typing"></span></h2>
           <div class="btn btn-rounded btn-l stagger1">
             <a href="#">
@@ -83,7 +83,7 @@
             </a>
           </div>
           <a
-            href="https://github.com/Fizzify"
+            href="https://github.com/ireiji"
             target="_blank"
             class="hero-github"
             ><svg
@@ -159,12 +159,11 @@
         <h1 class="about-title">About Me</h1>
         <p class="about-subtitle">This is where you can find info about me.</p>
         <p class="about-paragraph">
-          I am a Web and Java Developer while also being a Graphic Designer. I
-          started coding when I was 12 years old and I've been pursuing my
-          dreams since then. I wish to graduate with a Computer Science degree
+          I am a Java Developer while also gamer. I
+          started coding when I was 11 years old and I've been pursuing my
+          dreams since then. I wish to graduate with aN Aeronautical Engineering degree
           in the future. I am currently a student studying in the Philippines
-          and I dream to become a Software Engineer and a Senior Developer when
-          I grow up, I have experience in technology.
+          and I dream to become a Pilot.
         </p>
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -190,41 +189,6 @@
             <h1>My Skills</h1>
           </div>
           <div class="container">
-            <div class="skills-box">
-              <div class="skills-title">
-                <div class="img">
-                  <img
-                    src="images/icon-html.svg"
-                    alt="HTML 5 Logo"
-                    class="skills-icon"
-                  />
-                </div>
-                <h3>HTML 5</h3>
-              </div>
-              <p>
-                I use HTML to format and code the structures of my websites. It
-                is essential for web development. I am very experienced with
-                HTML and I use it everytime I make a website.
-              </p>
-            </div>
-
-            <div class="skills-box">
-              <div class="skills-title">
-                <div class="img">
-                  <img
-                    src="images/icon-css.svg"
-                    alt="CSS 3 Logo"
-                    class="skills-icon"
-                  />
-                </div>
-                <h3>CSS 3</h3>
-              </div>
-              <p>
-                I use CSS for styling my websites, this is really helpful if you
-                want to make your site pop. CSS is essential to beautify
-                websites and to make them look more professional.
-              </p>
-            </div>
 
             <div class="skills-box">
               <div class="skills-title">
@@ -238,7 +202,7 @@
                 <h3>JavaScript</h3>
               </div>
               <p>
-                JavaScript is what I use for the functionality of my websites,
+                JavaScript is what I use for some joke apps I want to make,
                 it is one of the most popular if not the most popular
                 programming languages.
               </p>
@@ -258,45 +222,11 @@
               <p>
                 Java was the first programming language I learned. I use it to
                 mostly create Minecraft Clients. I love Java's flexibility
-                especially it's features like the classes and such. I use Mixin
+                especially it's features like the classes and such. I use Mixins
                 and MCP for my Minecraft clients.
               </p>
             </div>
 
-            <div class="skills-box">
-              <div class="skills-title">
-                <div class="img">
-                  <img
-                    src="images/icon-scss.svg"
-                    alt="SCSS Logo"
-                    class="skills-icon"
-                  />
-                </div>
-                <h3>SCSS</h3>
-              </div>
-              <p>
-                I use SCSS or Sass for making CSS easier and more flexible with
-                its nesting capabilities. I use it more than CSS when making my
-                websites and I am experienced with it.
-              </p>
-            </div>
-
-            <div class="skills-box">
-              <div class="skills-title">
-                <div class="img">
-                  <img
-                    src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Git_icon.svg"
-                    alt="SCSS Logo"
-                    class="skills-icon"
-                  />
-                </div>
-                <h3>Git</h3>
-              </div>
-              <p>
-                I use Git alongside with Github for version control, and I use
-                Github as a place to store and showcase my projects.
-              </p>
-            </div>
           </div>
         </div>
       </div>
