--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
         <h1 class="about-title">About Me</h1>
         <p class="about-subtitle">This is where you can find info about me.</p>
         <p class="about-paragraph">
-          I am a Java Developer while also gamer. I
+          I am a Java Developer while also being a gamer. I
           started coding when I was 11 years old and I've been pursuing my
-          dreams since then. I wish to graduate with aN Aeronautical Engineering degree
+          dreams since then. I wish to graduate with an Aeronautical Engineering degree
           in the future. I am currently a student studying in the Philippines
           and I dream to become a Pilot.
         </p>
@@ -230,92 +230,7 @@
           </div>
         </div>
       </div>
-      <div id="projects" class="section projects">
-        <header class="projects-header">
-          <h1 class="projects-title">Projects</h1>
-          <p class="projects-subtitle">Here are the projects I have built.</p>
-        </header>
-        <div class="grid">
-          <div class="project-item">
-            <h1>Simon Game jQuery</h1>
-            <p>A game I made using jQuery and JavaScript.</p>
-            <a
-              href="https://simon-game-jquery-fizzify.netlify.app/"
-              target="__blank"
-            >
-              <img
-                class="item-img"
-                src="https://user-images.githubusercontent.com/79361847/167284135-f91bada2-ec98-41a0-83d7-abba8bd17af8.png"
-                alt="Project Preview"
-              />
-            </a>
-          </div>
-
-          <div class="project-item">
-            <h1>Notei</h1>
-            <p>
-              Notei is a note-taking app for organization. It has a sticky note
-              feel to it as you can drag around the notes wherever you want.
-            </p>
-            <a href="https://www.notei.ml" target="__blank">
-              <img
-                class="item-img"
-                src="https://user-images.githubusercontent.com/79361847/171084154-cc4ad142-db51-4d1c-ab67-0cd838c925a1.png"
-                alt="Project Preview"
-              />
-            </a>
-          </div>
-
-          <div class="project-item">
-            <h1>Electron, Express, EJS template</h1>
-            <p>
-              A template or boilerplate for Electron, Express, EJS, or what I
-              like to call it, The Three E's.
-            </p>
-            <a
-              href="https://github.com/Fizzify/electron-express-ejs-template"
-              target="__blank"
-            >
-              <img
-                class="item-img"
-                src="https://user-images.githubusercontent.com/79361847/167061859-0b912e2c-9485-4992-b1ce-70bb86b0dd12.png"
-                alt="Project Preview"
-              />
-            </a>
-          </div>
-
-          <div class="project-item">
-            <h1>Midnight Client Fan Site</h1>
-            <p>
-              A fansite I made for a client that I was a former developer of.
-            </p>
-            <a
-              href="https://midnight-client-fanpage.netlify.app"
-              target="__blank"
-            >
-              <img
-                class="item-img"
-                src="https://user-images.githubusercontent.com/79361847/167284514-2d3f2eb1-5d79-43c2-9ace-5f7eacb358bb.png"
-                alt="Project Preview"
-              />
-            </a>
-          </div>
-
-          <div class="project-item">
-            <h1>Dog Fan Site</h1>
-            <p>A fan site for dogs, made with love.</p>
-            <a href="https://dog-fansite.netlify.app/" target="__blank">
-              <img
-                class="item-img"
-                src="https://user-images.githubusercontent.com/79361847/158291557-d5c75e82-5064-4348-97b0-8ca11074ba0a.png"
-                alt="Project Preview"
-              />
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-
+    
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.2/fullpage.min.js"
       integrity="sha512-gSf3NCgs6wWEdztl1e6vUqtRP884ONnCNzCpomdoQ0xXsk06lrxJsR7jX5yM/qAGkPGsps+4bLV5IEjhOZX+gg=="
